chiffre arrondie bug corrigé